2007-01-31  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Dap/Banshee.Dap.MassStorage/MassStorageDap.cs: If the DAP is not
	restricted to a particular folder depth, use the normal Banshee
	FileNamePattern when copying music over. Fixes BGO #398491.

2007-01-30  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Dap/Banshee.Dap.MassStorage/MassStorageDap.cs:
	* src/Dap/Banshee.Dap.MassStorage/MassStorageTrackInfo.cs: Cleanup
	whitespace (follow HACKING).

2007-01-29  James Willcox  <snorp@snorp.net>

	* src/Plugins/Banshee.Plugins.Daap/daap-sharp/Database.cs: updated from
	upstream, fixes a problem where track numbers weren't showing up.

2007-01-24  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.Widgets/PropertyTable.cs: Do not add a key label
	if the key string is null

	* src/Core/Banshee.Base/Banshee.AudioProfiles.Gui/ProfileConfigureButton.cs:
	Protected against a potential nullref

	* src/Core/Banshee.Base/Banshee.AudioProfiles.Gui/ProfileConfigurationDialog.cs:
	Added ':' to the end of the control labels

	* src/Core/Banshee.Base/Sources/DapSource.cs: Override the default source
	property label to 'iPod Properties', where iPod is the generic device 
	name - nicer than 'Source Properties'

	* src/Core/Banshee.Base/Dap/DapPropertiesDialog.cs: Use a description box
	container so the profile selector doesn't look goofy

2007-01-24  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.Base/Banshee.AudioProfiles/PipelineVariable.cs:
	* src/Core/Banshee.Base/Banshee.AudioProfiles/Profile.cs: Use the XML
	utilities in Banshee.Base.Localization to select the right string node
	based on xml:lang

	* src/Core/Banshee.Base/Localization.cs: Utilities to read the instance
	language setting (based on g_get_language_names()); XML utilities to to
	select nodes matching a query that also match against an xml:lang for
	the language in the current instance

	* src/Core/Banshee.Base/Makefile.am:
	* src/Core/Banshee.Base/Banshee.Base.mdp: Added Localization.cs
